# rapyd-py

./: .env.example  .gitignore  CLAUDE.md  LICENSE  RAPYD_API_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
rapyd/: __init__.py  auth.py  client.py  config.py  enums.py  exceptions.py  http.py  pagination.py  webhooks.py
rapyd/models/: __init__.py  base.py  issuing.py  payment.py  payout.py  verify.py  wallet.py  webhook.py
rapyd/resources/: __init__.py  base.py  beneficiaries.py  card_programs.py  cards.py  checkout.py  customers.py  data.py  disputes.py  fraud.py  identities.py  invoices.py  payment_links.py  payment_methods.py  payments.py  payout_methods.py  payouts.py  plans.py  products.py  refunds.py  senders.py  subscriptions.py  verification.py  virtual_accounts.py  wallet_contacts.py  wallet_transactions.py  wallet_transfers.py  wallets.py
tests/: conftest.py  test_auth.py  test_client.py  test_http.py  test_pagination.py  test_payments.py  test_payouts.py  test_wallets.py  test_webhooks.py
